Implement get class name as table name and run test to check

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
             "Ibonly\\SugarORM\\": "src/"
         }
     },
+    "autoload-dev": {
+        "classmap": ["test/"],
+        "psr-4"   : {
+            "Ibonly\\SugarORM\\Test\\": "test/"
+        }
+    },
     "require": {
         "phpunit/phpunit": "^5.0"
     }
