--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     },
     "require": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "vlucas/phpdotenv": "^2.0"
     }
 }
