--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         }
     },
     "require": {
-        "phpunit/phpunit": "^5.0",
         "vlucas/phpdotenv": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0",
+        "mockery/mockery": "0.9.4"
     }
 }
