Modify Travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ before_script:
 # use the $DB env variable to determine the phpunit.xml to use
 script: phpunit --configuration phpunit_$DB.xml --coverage-text
 
+install: travis_retry composer install --no-interaction --prefer-source
+
 # configure notifications (email, IRC, campfire etc)
 notifications:
   irc: "irc.freenode.org#yourfavouriteroomfortravis"
