--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
+        "phpunit/phpunit": "4.8.*",
         "mockery/mockery": "0.9.4"
     }
 }
