--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
-        "mockery/mockery": "0.9.4"
+        "mockery/mockery": ">=0.7.2"
     }
 }
