Modify README.md file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ibonly/sugar-orm",
+    "name": "ibonly/Potato-ORM",
     "authors": [
         {
             "name": "Adeniyi Ibraheem",
