--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ibonly/Potato-orm",
+    "name": "ibonly/potato-orm",
     "authors": [
         {
             "name": "Adeniyi Ibraheem",
