Code optimization on exceptions

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DATABASE_DRIVER =
-DATABASE_HOST =
-DATABASE_NAME =
-DATABASE_USER =
-DATABASE_PASSWORD =
-DATABASE_PORT =
+DATABASE_DRIVER   = xxxxxxxxx
+DATABASE_HOST     = xxxxxxxxx
+DATABASE_NAME     = xxxxxxxxx
+DATABASE_USER     = xxxxxxxxx
+DATABASE_PASSWORD = xxxxxxxxx
+DATABASE_PORT     = xxxxxxxxx
