Updates on code optimization

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DATABASE_NAME     = xxxxxxxxx
 DATABASE_USER     = xxxxxxxxx
 DATABASE_PASSWORD = xxxxxxxxx
 DATABASE_PORT     = xxxxxxxxx
+SQLITE_PATH       = xxxxxxxxx
