--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,10 @@ matrix:
 
 install: travis_retry composer install --no-interaction --prefer-source
 
-script: vendor/bin/phpunit
+script:
+    "phpunit --testsuite=unit --coverage-text --coverage-clover build/logs/clover.xml"
+
+after_script:
+- CODECLIMATE_REPO_TOKEN=71406ec7ca6926d2e437e65a25b63456e89bb7deedd363ccebd56dd80cd551a5 ./vendor/bin/test-reporter --stdout > codeclimate.json
+ "sh -c 'if [ \"$TRAVIS_PHP_VERSION\" != \"hhvm\" ]; then curl -X POST -d
+ @codeclimate.json -H \"Content-Type: application/json\" -H \"User-Agent: Code Climate (PHP Test Reporter v0.1.1)\" https://codeclimate.com/test_reports ; fi'"
