--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
-        "mockery/mockery": ">=0.7.2"
+        "mockery/mockery": ">=0.7.2",
+        "codeclimate/php-test-reporter": "dev-master"
     }
 }
