--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ script:
 
 after_script:
 - CODECLIMATE_REPO_TOKEN=71406ec7ca6926d2e437e65a25b63456e89bb7deedd363ccebd56dd80cd551a5 ./vendor/bin/test-reporter --stdout > codeclimate.json
- "sh -c 'if [ \"$TRAVIS_PHP_VERSION\" != \"hhvm\" ]; then curl -X POST -d
- @codeclimate.json -H \"Content-Type: application/json\" -H \"User-Agent: Code Climate (PHP Test Reporter v0.1.1)\" https://codeclimate.com/test_reports ; fi'"
+- "sh -c 'if [ \"$TRAVIS_PHP_VERSION\" != \"hhvm\" ]; then curl -X POST -d @codeclimate.json -H \"Content-Type: application/json\" -H \"User-Agent: Code Climate (PHP Test Reporter v0.1.1)\" https://codeclimate.com/test_reports  ; fi'"
